sg.tf
resource "aws_security_group" "ass-aws_security-grp-rule" {
 name = "allow_ssh_http_https"
 description = "Allow SSH, HTTP, HTTPS inbound traffic for public instance"
 vpc_id =aws_vpc.ass_vpc.id


 ingress {
    description = "HTTP"
    from_port = 80
    to_port = 80
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
 } 

  ingress {
    description = "HTTPS"
    from_port = 443
    to_port = 443
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"] 
}
 ingress {
    description = "SSH"
    from_port = 22
    to_port = 22
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
 }    

 egress {
    from_port = 0
    to_port = 0
    protocol = "-1"
    cidr_blocks = ["0.0.0.0/0"]
 }

 tags = {
    Name = "ass-security-grp-rule"
 }
}
